--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ apply from: 'version.gradle'
 
 ext {
 	sl4jVersion = '1.7.21'
+	cassandraDriverVersion = '3.1.0'
 }
 
 allprojects {
@@ -27,6 +28,8 @@ allprojects {
 		compile 'org.apache.commons:commons-lang3:3.4'
 		compile 'com.google.guava:guava:19.0'
 		compile 'com.typesafe:config:1.3.0'
+		compile 'com.google.code.findbugs:jsr305:3.0.1'
+		compile 'com.datastax.cassandra:cassandra-driver-core:' + cassandraDriverVersion
 		testCompile 'junit:junit:4.12'
 		testCompile 'org.mockito:mockito-all:1.10.19'
 	}
