--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ allprojects {
 		compile 'com.typesafe:config:1.3.0'
 		compile 'com.google.code.findbugs:jsr305:3.0.1'
 		compile 'com.datastax.cassandra:cassandra-driver-core:' + cassandraDriverVersion
+		compile 'com.datastax.cassandra:cassandra-driver-extras:' + cassandraDriverVersion
 		testCompile 'junit:junit:4.12'
 		testCompile 'org.mockito:mockito-all:1.10.19'
 	}
