issue #1 - TagData - use long type for time column

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -18,6 +18,7 @@ create table if not exists tag_data(
     """
 
     insertSql = "insert into tag_data (tag, date, time, value, quality) values(?, ?, ?, ?, ?)"
+    selectCountStat = "select count(*) from tag_data where date = ? and time >= ? and time <= ?"
 
   }
 
