--- a/src/main/resources/cds-test.conf
+++ b/src/main/resources/cds-test.conf
@@ -1,4 +1,4 @@
-SaveTest {
+SaveTagDataTest {
   tagCount = 10000
   savePeriod = 200
   runTime = 10m
@@ -6,7 +6,7 @@ SaveTest {
   truncateDataTable = true
 }
 
-QueryTest {
+QueryTagDataTest {
   runTime = 10m
   periods = [300, 2100, 20100]
 }
