--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -18,7 +18,8 @@ create table if not exists tag_data(
     """
 
     insertSql = "insert into tag_data (tag, date, time, value, quality) values(?, ?, ?, ?, ?)"
-    selectCountStat = "select count(*) from tag_data where date = ? and time >= ? and time <= ?"
+    findByPeriodSql = "select tag, time, value, quality from tag_data where date = ? and time >= ? and time <= ?"
+    selectCountByPeriodSql = "select count(*) from tag_data where date = ? and time >= ? and time <= ?"
 
   }
 
