--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,15 @@ allprojects {
 		into "$buildDir/dependency"
 	}
 
+	task sourcesJar(type: Jar, dependsOn: classes) {
+		classifier = 'sources'
+		from sourceSets.main.allSource
+	}
+
+	artifacts {
+		archives sourcesJar
+	}
+
 }
 
 apply from: 'private.gradle'
