--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -19,7 +19,7 @@ create table if not exists tag_data(
 
     insertSql = "insert into tag_data (tag, date, time, value, quality) values(?, ?, ?, ?, ?)"
     findByPeriodSql = "select tag, time, value, quality from tag_data where date = ? and time >= ? and time <= ?"
-    selectTotalsByPeriodSql = "select count(*), sum(value) from tag_data where date = ? and time >= ? and time <= ?"
+    selectTotalsSql = "select count(*), sum(value) from tag_data where date = ? and time >= ? and time <= ?"
 
   }
 
