issue #2 - configure metric logs

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -23,6 +23,12 @@ create table if not exists tag_data(
 
   }
 
+  MetricReporter {
+    jmx.enabled = true
+    log.enabled = true
+    log.period = 1m
+  }
+
   test {
     include "cds-test.conf"
   }
