issue #2 - MetricReporter - add csv repoter

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -27,6 +27,9 @@ create table if not exists tag_data(
     jmx.enabled = true
     log.enabled = true
     log.period = 1m
+    csv.enabled = true
+    csv.period = 5s
+    csv.dir = "data"
   }
 
   test {
