--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -26,10 +26,10 @@ create table if not exists tag_data(
   MetricReporter {
     jmx.enabled = true
     log.enabled = true
-    log.period = 1m
+    log.period = 30s
     csv.enabled = true
-    csv.period = 5s
     csv.dir = "data"
+    csv.period = 30s
   }
 
   test {
