--- a/src/main/resources/cds-test.conf
+++ b/src/main/resources/cds-test.conf
@@ -2,7 +2,7 @@ SaveTagDataTest {
   tagCount = 10000
   savePeriod = 200
   runTime = 10m
-  asyncPermits = 1
+  asyncDelay = 1
   truncateDataTable = true
 }
 
