--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -28,7 +28,7 @@ create table if not exists tag_data(
     log.enabled = true
     log.period = 30s
     csv.enabled = true
-    csv.dir = "data"
+    csv.dir = "log/metrics"
     csv.period = 30s
   }
 
