--- a/src/main/resources/cds-test.conf
+++ b/src/main/resources/cds-test.conf
@@ -9,6 +9,6 @@ SaveTagDataTest {
 QueryTagDataTest {
   startDelay = 1m
   runTime = 9m
-  threadCount = 1
+  threadCounts = [1]
   periods = [300, 2100, 20100]
 }
