issue #3 - QueryTagDataTest - add configuration for parallel query test

--- a/src/main/resources/cds-test.conf
+++ b/src/main/resources/cds-test.conf
@@ -11,4 +11,7 @@ QueryTagDataTest {
   runTime = 9m
   threadCounts = [1]
   periods = [300, 2100, 20100]
+//  runTime = 5s
+//  threadCounts = [3, 6, 10, 30]
+//  periods = [10100]
 }
