issue #3 - add configuration LongQueryTest,  ParallelQueryTest

--- a/src/main/resources/cds-test.conf
+++ b/src/main/resources/cds-test.conf
@@ -11,7 +11,17 @@ QueryTagDataTest {
   runTime = 9m
   threadCounts = [1]
   periods = [300, 2100, 20100]
-//  runTime = 5s
-//  threadCounts = [3, 6, 10, 30]
-//  periods = [10100]
+}
+
+LongQueryTest = ${cds.test.QueryTagDataTest}
+LongQueryTest {
+  runTime = 1s
+  periods = [1100, 3100, 9100, 27100, 81100]
+}
+
+ParallelQueryTest = ${cds.test.QueryTagDataTest}
+ParallelQueryTest {
+  runTime = 1s
+  threadCounts = [3, 6, 10, 30]
+  periods = [10100]
 }
