issue #3 - update test config

--- a/src/main/resources/cds-test.conf
+++ b/src/main/resources/cds-test.conf
@@ -15,13 +15,13 @@ QueryTagDataTest {
 
 LongQueryTest = ${cds.test.QueryTagDataTest}
 LongQueryTest {
-  runTime = 1s
+  runTime = 1m
   periods = [1100, 3100, 9100, 27100, 81100]
 }
 
 ParallelQueryTest = ${cds.test.QueryTagDataTest}
 ParallelQueryTest {
-  runTime = 1s
+  runTime = 1m
   threadCounts = [3, 6, 10, 30]
   periods = [10100]
 }
