--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -2,6 +2,7 @@ cds {
 
   session {
     contactPoints = ["127.0.0.1"]
+    contactPoints = ["10.30.130.41", "10.30.130.42"]
     keyspace = "cds"
     readTimeout = 30s
   }
@@ -13,14 +14,14 @@ cds {
 
     createTableSql = """
 create table if not exists tag_data(
-  tag text, date int, time timestamp, value double, quality int,
-  primary key (date, time, tag)
-) with clustering order by (time desc)
+  tag text, date int, t timestamp, v double, q int,
+  primary key (date, t, tag)
+) with clustering order by (t desc)
     """
 
-    insertSql = "insert into tag_data (tag, date, time, value, quality) values(?, ?, ?, ?, ?)"
-    findByPeriodSql = "select tag, time, value, quality from tag_data where date = ? and time >= ? and time <= ?"
-    selectTotalsSql = "select count(*), sum(value) from tag_data where date = ? and time >= ? and time <= ?"
+    insertSql = "insert into tag_data (tag, date, t, v, q) values(?, ?, ?, ?, ?)"
+    findByPeriodSql = "select tag, t, v, q from tag_data where date = ? and t >= ? and t <= ?"
+    selectTotalsSql = "select count(*), sum(v) from tag_data where date = ? and t >= ? and t <= ?"
 
   }
 
