--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -5,6 +5,7 @@ cds {
     contactPoints = ["10.30.130.41", "10.30.130.42"]
     keyspace = "cds"
     readTimeout = 30s
+    fetchSize = 10000000
   }
 
   TagDataService {
