issue #5 - use PlainTextAuthProvider

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -3,6 +3,8 @@ cds {
   session {
     contactPoints = ["127.0.0.1"]
     contactPoints = ["10.30.130.41", "10.30.130.42"]
+    user = "cassandra"
+    password = "cassandra"
     keyspace = "cds"
     readTimeout = 30s
     fetchSize = 10000000
