--- a/src/main/resources/cds-test.conf
+++ b/src/main/resources/cds-test.conf
@@ -7,9 +7,16 @@ SaveTagDataTest {
 }
 
 QueryTagDataTest {
+  startDelay = 0
+  runTime = 1m
+  threadCounts = [1]
+  periods = [300]
+}
+
+QueryOnSaveTest = ${cds.test.QueryTagDataTest}
+QueryOnSaveTest {
   startDelay = 1m
   runTime = 9m
-  threadCounts = [1]
   periods = [300, 2100, 20100]
 }
 
