issue #6 - add enabledTests parameter

--- a/src/main/resources/cds-test.conf
+++ b/src/main/resources/cds-test.conf
@@ -1,9 +1,11 @@
+enabledTests = ""
+
 SaveTagDataTest {
   tagCount = 10000
   savePeriod = 200
   runTime = 10m
   asyncDelay = 1
-  truncateDataTable = true
+  truncateDataTable = false
 }
 
 QueryTagDataTest {
