--- a/src/main/resources/cds-test.conf
+++ b/src/main/resources/cds-test.conf
@@ -15,8 +15,8 @@ QueryTagDataTest {
   periods = [300]
 }
 
-QueryOnSaveTest = ${cds.test.QueryTagDataTest}
-QueryOnSaveTest {
+QueryTest = ${cds.test.QueryTagDataTest}
+QueryTest {
   startDelay = 1m
   runTime = 9m
   periods = [300, 2100, 20100]
