--- a/src/main/resources/cds-test.conf
+++ b/src/main/resources/cds-test.conf
@@ -12,25 +12,26 @@ QueryTagDataTest {
   startDelay = 0
   runTime = 1m
   threadCounts = [1]
-  periods = [300]
+  limits = [10]
+  valueCount = 50
 }
 
 QueryTest = ${cds.test.QueryTagDataTest}
 QueryTest {
   startDelay = 1m
   runTime = 9m
-  periods = [300, 2100, 20100]
+  limits = [10, 100, 1000]
 }
 
 LongQueryTest = ${cds.test.QueryTagDataTest}
 LongQueryTest {
   runTime = 1m
-  periods = [1100, 3100, 9100, 27100, 81100]
+  limits = [50, 150, 450, 1350, 4050]
 }
 
 ParallelQueryTest = ${cds.test.QueryTagDataTest}
 ParallelQueryTest {
   runTime = 1m
   threadCounts = [3, 6, 10, 30]
-  periods = [10100]
+  limits = [500]
 }
