issue #7 - QueryTagDataTest - add calculateValueCount method

--- a/src/main/resources/cds-test.conf
+++ b/src/main/resources/cds-test.conf
@@ -13,7 +13,8 @@ QueryTagDataTest {
   runTime = 1m
   threadCounts = [1]
   limits = [10]
-  valueCount = 50
+  statPeriod = 5s
+  valueCount = 0
 }
 
 QueryTest = ${cds.test.QueryTagDataTest}
