issue #7 - add maxRequestsPerConnection

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -6,6 +6,7 @@ cds {
     user = "cassandra"
     password = "cassandra"
     keyspace = "cds"
+    maxRequestsPerConnection = 10000
     readTimeout = 30s
     fetchSize = 10000000
   }
