issue #7 - update test parameters

--- a/src/main/resources/cds-test.conf
+++ b/src/main/resources/cds-test.conf
@@ -19,8 +19,8 @@ QueryTagDataTest {
 
 QueryTest = ${cds.test.QueryTagDataTest}
 QueryTest {
-  startDelay = 1m
-  runTime = 9m
+  startDelay = 10s
+  runTime = 10m
   limits = [10, 100, 1000]
 }
 
