--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -6,7 +6,7 @@ cds {
     user = "cassandra"
     password = "cassandra"
     keyspace = "cds"
-    coreConnectionsPerHost = 4
+    connectionsPerHost = 4
     maxRequestsPerConnection = 10000
     readTimeout = 30s
     fetchSize = 10000000
