issue #8 - add executorSize parameter

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -10,6 +10,7 @@ cds {
     maxRequestsPerConnection = 10000
     readTimeout = 30s
     fetchSize = 10000000
+    executorSize = 16
   }
 
   TagDataService {
