--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ allprojects {
 		compile 'org.slf4j:log4j-over-slf4j:' + sl4jVersion
 		compile 'ch.qos.logback:logback-classic:1.1.7'
 		compile 'org.apache.commons:commons-lang3:3.4'
+		compile 'org.apache.commons:commons-math3:3.6.1'
 		compile 'com.google.guava:guava:19.0'
 		compile 'com.typesafe:config:1.3.0'
 		compile 'com.google.code.findbugs:jsr305:3.0.1'
