issue #9 - implement TagCalculator

--- a/src/main/resources/cds-test.conf
+++ b/src/main/resources/cds-test.conf
@@ -2,6 +2,7 @@ enabledTests = ""
 
 SaveTagDataTest {
   tagCount = 10000
+  calculateTags = false
   savePeriod = 200
   runTime = 10m
   asyncDelay = 1
