issue #10 - TagDataServiceImpl - fix selectLastTime method

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -31,6 +31,7 @@ create table if not exists tag_data(
 
     insertSql = "insert into tag_data (tag, date, t, v, q) values(?, ?, ?, ?, ?)"
     findByPeriodSql = "select tag, t, v, q from tag_data where date = ? and t >= ? and t <= ?"
+    selectTimeSql = "select t from tag_data where date = ? limit 1"
     selectTotalsSql = "select count(*), sum(v) from tag_data where date = ? and t >= ? and t <= ?"
 
   }
